--- a/TicTacToePresentation/Views/Home/Index.cshtml
+++ b/TicTacToePresentation/Views/Home/Index.cshtml
@@ -1,91 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Angular Home Page";
+    Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!doctype html>
+<html lang="en" ng-app="lobbyApp">
+
+<head>
+
+</head>
+
+<body ng-controller="lobbyController">
 
 
-    <button class="btn btn-primary btn-sm" id="seat_button">Seat</button>
-    <button class="btn btn-primary btn-sm" id="seat_two_button">SeatTwo</button>
-    <button class="btn btn-primary btn-sm" id="seatout_button">SeatOut</button>
-    <button class="btn btn-primary btn-sm" id="seatout_two_button">SeatOutTwo</button>
-    <button class="btn btn-primary btn-sm" id="disconnect_button">Disconnect</button>
 
-    <button class="btn btn-primary btn-sm" id="start_button">Start</button>
-    <button class="btn btn-primary btn-sm" id="stop_button">Stop</button>
-</div>
+    <div class="row">
+        <div class="col-md-3 col-sm-6" ng-repeat="q in queues">
+            <button class="btn btn-success" ng-click="seat(q.ID)">Seat</button>
+            <h3>{{q.Name}}</h3>
+            <h3>{{q.PlayerCount}}</h3>
 
+            <button class="btn btn-danger" ng-click="seatOut(q.ID)">
+                SeatOut
+            </button>
+        </div>
+    </div>
 
-@section Scripts {
+        <script>
+            var signalrAddress = 'http://localhost:5102/';
+        </script>
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/Scripts/angular.js"></script>
+        <script src="~/Scripts/Lib/signalrCore/dist/browser/signalr.js"></script>
+        <script src="~/Scripts/Communication/ServerLayer.js"></script>
+        <script src="~/Scripts/Lobby/Lobby.js"></script>
 
-    <script>
+</body>
 
-        $(document).ready(() => {
-            const connection = new signalR.HubConnectionBuilder()
-                .withUrl("http://localhost:5102/lobby", {
-                    transport: signalR.HttpTransportType.WebSockets
-                })
-                .configureLogging(signalR.LogLevel.Debug)
-                .build();
-
-            connection.on("QueueData", (queues) => {
-                console.log(queues);
-            });
-            connection.on("Disconnect", (queues) => {
-                console.log("Disconnected!");
-            });
-            connection.on("YouLeftQueue", () => {
-                console.log(`You Left Queue.`)
-            });
-            connection.on("YouSetOnQueue", (queueId) => {
-                console.log(`You Set On Queue ${queueId}.`)
-            });
-            connection.on("CanSeat", (canSeat) => {
-                console.log(`Can you seat? ${canSeat}.`)
-            });
-
-
-            connection.on("Started", (msg) => {
-                console.log(`Timer ${msg}.`)
-            });
-
-            connection.on("Stopped", (msg) => {
-                console.log(`Timer ${msg}.`)
-            });
-
-            connection.start();
-
-
-            $('#seat_button').click(() => {
-                connection.invoke("Seat", 1);
-            });
-            $('#seat_two_button').click(() => {
-                connection.invoke("Seat", 2);
-            });
-            $('#seatout_button').click(() => {
-                connection.invoke("SeatOut", 1);
-            });
-            $('#seatout_two_button').click(() => {
-                connection.invoke("SeatOut", 2);
-            });
-            $('#disconnect_button').click(() => {
-                connection.stop();
-            });
-
-
-            $('#start_button').click(() => {
-                connection.invoke("StartTimer");
-            });
-            $('#stop_button').click(() => {
-                connection.invoke("StopTimer");
-            });
-
-
-        });
-
-    </script>
-
-}
+</html>
