--- a/TicTacToePresentation/Views/Home/Index.cshtml
+++ b/TicTacToePresentation/Views/Home/Index.cshtml
@@ -16,11 +16,12 @@
 
     <div class="row">
         <div class="col-md-3 col-sm-6" ng-repeat="q in queues">
-            <button class="btn btn-success" ng-click="seat(q.ID)">Seat</button>
-            <h3>{{q.Name}}</h3>
-            <h3>{{q.PlayerCount}}</h3>
+            <button class="btn btn-success" ng-click="seat(q.id)">Seat</button>
 
-            <button class="btn btn-danger" ng-click="seatOut(q.ID)">
+            <h3>{{q.name}}</h3>
+            <h3>{{q.playerCount}}</h3>
+
+            <button class="btn btn-danger" ng-click="seatOut(q.id)">
                 SeatOut
             </button>
         </div>
@@ -28,6 +29,7 @@
 
         <script>
             var signalrAddress = 'http://localhost:5102/';
+            var gameUrl = '/game/index';
         </script>
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/Scripts/angular.js"></script>
